# 0-shell

./: Cargo.toml  README.md  RoadMap.md  f.txt  file.json  file1.txt  file2.txt  instdin.txt  t
cat/src/: lib.rs
cd/: Cargo.toml
cd/src/: lib.rs
cp/src/: lib.rs
echo/src/: lib.rs
ls/: Cargo.toml
ls/src/: directory.rs  file.rs  file_helpers.rs  helpers.rs  lib.rs  ls.rs
ls_test/: makefile
mkdir/src/: lib.rs
mv/: Cargo.toml
mv/src/: lib.rs
pwd/src/: lib.rs
rm/: Cargo.toml
rm/src/: lib.rs
terminal/: Cargo.toml
terminal/src/: command_router.rs  main.rs  parser.rs  reader.rs
tests/: cat_test.md  cp_test.md  ls_test.md  mv_test.md  rm _test.md
zero/src/: main.rs
