[package]
name = "terminal"
version = "0.1.0"
edition = "2024"

[dependencies]
ls = { path = "../ls" }
pwd = { path = "../pwd" }
mkdir = { path = "../mkdir" }
cat = { path = "../cat" }
echo = { path = "../echo" }
rm = { path = "../rm" }
mv = { path = "../mv" }
cp = { path = "../cp" }
colored = "2.0"