[package]
name = "terminal"
version = "0.1.0"
edition = "2024"

[dependencies]
ls = { path = "../ls" }
pwd = { path = "../pwd" }
mkdir = { path = "../mkdir" }
cat = { path = "../cat" }
cd = { path = "../cd" }
echo = { path = "../echo" }
rm = { path = "../rm" }
mv = { path = "../mv" }
cp = { path = "../cp" }
cd = { path = "../cd" }
colored = "2.0"
atty = "0.2"
